Speedups, correlation and covariance calculation threaded

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/PCA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jsci-core.jar=/Users/juha/JavaLib/jsci-core.jar
 file.reference.mtj-1.0-snapshot.jar=/Users/juha/JavaLib/mtj-1.0-snapshot.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mtj-1.0-snapshot.jar}
+    ${file.reference.mtj-1.0-snapshot.jar}:\
+    ${file.reference.jsci-core.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
